# xda

./: Pipfile  README.md  pyproject.toml  render.yaml
app/: AdminViews.py  Bkk1Views.py  EmailBackEnd.py  Skw1Views.py  Skw3Views.py  admin.py  api.py  forms.py  models.py  schema.py  urls.py  views.py
app/migrations/: 0001_initial.py
app/templates/: login.html
app/templates/admin/: add_career.html  add_edu.html  add_gender.html  add_level.html  add_pro.html  add_staff.html  add_user_type.html  admin_home.html  print.html
app/templates/bkk1/: bkk1_filter_nor.html  bkk1_home.html
app/templates/includes/: header.html  main.html  sidebar.html
app/templates/layouts/: base.html  base_all.html  base_n.html  scripts.html  table_all.html  table_filter.html  table_filter_nor.html  tableall_form.html  zone_n.html  zone_n_form.html
app/templates/skw1/: skw1_filter_nor.html  skw1_home.html
app/templates/skw3/: skw3_filter_nor.html  skw3_home.html
core/: settings.py
staticfiles/: staticfiles.json
staticfiles/css/: main.css
