[tool.poetry]
name = "xd_django"
version = "0.1.0"
description = ""
authors = ["Marek Kaput <marek.kaput@swmansion.com>"]

[tool.poetry.dependencies]
python = "^3.9.1"
django = "^3.1.7"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.5"
whitenoise = {extras = ["brotli"], version = "^5.1.0"}
gunicorn = "^20.0.4"